; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/netmap/extr_ctrl-api-test.c_legacy_regif_extra_bufs_pipe.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/netmap/extr_ctrl-api-test.c_legacy_regif_extra_bufs_pipe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TestContext = type { i32, i32, i32 }

@.str = private unnamed_addr constant [11 x i8] c"{pipeexbuf\00", align 1
@NR_REG_ALL_NIC = common dso_local global i32 0, align 4
@NETMAP_API_NIOCREGIF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TestContext*)* @legacy_regif_extra_bufs_pipe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @legacy_regif_extra_bufs_pipe(%struct.TestContext* %0) #0 {
  %2 = alloca %struct.TestContext*, align 8
  store %struct.TestContext* %0, %struct.TestContext** %2, align 8
  %3 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %4 = getelementptr inbounds %struct.TestContext, %struct.TestContext* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @strncat(i32 %5, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 4)
  %7 = load i32, i32* @NR_REG_ALL_NIC, align 4
  %8 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %9 = getelementptr inbounds %struct.TestContext, %struct.TestContext* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %11 = getelementptr inbounds %struct.TestContext, %struct.TestContext* %10, i32 0, i32 0
  store i32 58, i32* %11, align 4
  %12 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %13 = load i32, i32* @NETMAP_API_NIOCREGIF, align 4
  %14 = call i32 @niocregif(%struct.TestContext* %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @strncat(i32, i8*, i32) #1

declare dso_local i32 @niocregif(%struct.TestContext*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
